# spi-flash-toolkit

./: .gitignore  CMakeLists.txt  README.md  STM32F103xB.ld  build.ps1  setup.ps1
cmake/: arm-none-eabi.cmake  build_config.cmake  mcu_arch.txt  mcu_config.cmake  riscv-wch-elf.cmake  toolchain.cmake
scripts/: flash-dump.ps1  show-size.ps1
user/src/: main.c
web/: index.html
